--- a/package.json
+++ b/package.json
@@ -31,9 +31,7 @@
   "bugs": {
     "url": "https://github.com/GriseldaAlonso/DEV001-md-links_GAG/issues"
   },
-  "bin": {
-    "md-Links": "./cli.js"
-  },
+  "bin": "./cli.js",
   "homepage": "https://github.com/GriseldaAlonso/DEV001-md-links_GAG#readme",
   "devDependencies": {
     "@types/jest": "^29.2.5",
@@ -45,6 +43,7 @@
     "jest-environment-vscode-extension": "^0.0.5"
   },
   "dependencies": {
+    "commander": "^10.0.0",
     "node-fetch": "^2.6.8"
   }
 }
