--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
   "bugs": {
     "url": "https://github.com/GriseldaAlonso/DEV001-md-links_GAG/issues"
   },
-  "bin": "./cli.js",
+  "bin": {
+    "md-links": "src/cli.js"
+  },
   "homepage": "https://github.com/GriseldaAlonso/DEV001-md-links_GAG#readme",
   "devDependencies": {
     "@types/jest": "^29.2.5",
